fixed the issue with the z-index, now arrange the image like google images during search

--- a/components/notifications/notification-center/notification-center.module.css
+++ b/components/notifications/notification-center/notification-center.module.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: -4px;
     right: 0;
-    z-index: 40;
+    z-index: 31;
     flex-direction: column;
 }
 .notification-badge{
