--- a/pages/userprofile/user-profile.module.scss
+++ b/pages/userprofile/user-profile.module.scss
@@ -19,7 +19,7 @@ $weathers: (
     @apply flex flex-col w-full overflow-y-auto p-8 relative overflow-x-hidden h-full;
 }
 .top-layer{
-    @apply z-10;
+    @apply z-30;
 }
 .profile-banner-wrapper{
     
